--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -25,8 +29,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/jest": "^29.2.4",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "jest": "^26.6.3",
+    "jest-expo": "^47.0.1",
     "typescript": "^4.6.3"
   },
   "private": true
