--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": ["./jest-setup-after-env.js"]
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -29,6 +30,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^5.4.0",
+    "@testing-library/react-native": "^11.5.0",
     "@types/jest": "^29.2.4",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
